adding image name to the compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   backend:
     build:
       context: .
+    image: shkettoe/traveller-demo-backend:latest
     ports:
       - 5000:5000
     env_file:
