--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "migration:revert": "npm run typeorm migration:revert && rm src/migration/`ls src/migration/ -t | awk 'NR<2'`"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
